--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- font -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Oswald:300,400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Fugaz+One&display=swap"
+      rel="stylesheet"
+    />
+
     <title>react-pactice</title>
   </head>
   <body>
