--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="../src/image/fabicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Here is taichi's portfolio" />
     <!-- font -->
     <link
       href="https://fonts.googleapis.com/css?family=Oswald:300,400,700&display=swap"
@@ -19,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <title>react-pactice</title>
+    <title>Taichi's portfolio</title>
   </head>
   <body>
     <div id="root"></div>
