--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" 　href="../src/image/fabicon.png" />
+    <!-- <link rel="icon" type="image/png" 　href="fabicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      href="favicons/apple-touch-icon-180x180.png"
+    />
+    <link rel="icon" type="image/png" href="favicons/icon-192x192.png" />
+    <!-- <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" /> -->
     <meta name="description" content="Here is taichi's portfolio" />
+    <link rel="manifest" href="manifest.json" />
     <!-- font -->
     <link
       href="https://fonts.googleapis.com/css?family=Oswald:300,400,700&display=swap"
